<resources>
    <string name="app_name">AM002_Intent</string>
    <string name="main_activity">Main Activity</string>
    <string name="activity_two">Activity Two</string>
    <string name="main_activity_returned">Main Activity Returned</string>
    <string name="press_me">Press Me</string>
    <string name="result_ok">Result OK</string>
    <string name="result">result:</string>
    <string name="finish">Finish</string>
    <string name="state">State</string>
    <string name="str1">str1:</string>
    <string name="str2">str2:</string>
    <string name="n1">n1:</string>
    <string name="n2">n2:</string>
    <string name="n3">n3:</string>
    <string name="n4">n4:</string>
    <string name="bundle"><b>Bundle</b></string>
</resources>
