<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/activity_two"
        android:textSize="20dp"
        android:textColor="@color/colorAccent"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/result_ok"
        android:background="@color/green"
        android:id="@+id/rok"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/finish"
        android:textColor="@color/colorAccent"
        android:background="@color/yellow"
        android:id="@+id/finish"
        />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        >
        <TableRow>
            <TextView
                android:text="@string/str1"
                android:gravity="left" />
            <TextView
                android:id="@+id/str1"
                android:gravity="left"
                android:padding="3dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/n1"
                android:gravity="left" />
            <TextView
                android:id="@+id/n1"
                android:gravity="left"
                android:padding="3dp" />
        </TableRow>
        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/bundle"
                android:gravity="left" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/str2"
                android:gravity="left" />
            <TextView
                android:id="@+id/str2"
                android:gravity="left"
                android:padding="3dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/n2"
                android:gravity="left" />
            <TextView
                android:id="@+id/n2"
                android:gravity="left"
                android:padding="3dp" />
        </TableRow>
        <TableRow android:layout_marginTop="10dp" >
            <TextView
                android:text="@string/n3"
                android:gravity="left" />
            <TextView
                android:id="@+id/n3"
                android:gravity="left"
                android:padding="3dp" />
        </TableRow>

    </TableLayout>


</LinearLayout>



